@@ -921,7 +921,12 @@ command_argparse(dbref player, dbref cause, char **from, char *to,
       if (*f)
         f++;
       i++;
-      t++;
+      /* Because we test on f, not t. This was causing a bug wherein
+       * trying to build a commandraw with multiple rsargs, including
+       * one massive one, was causing a crash.
+       */
+      if ((t - to) < (BUFFER_LEN - 1))
+        t++;
       if (i == MAX_ARG)
         done = 1;
     }
@@ -979,11 +984,11 @@ command_isattr(char *command)
 
 /** A handy macro to free up the command_parse-allocated variables */
 #define command_parse_free_args \
-    mush_free(command, "string"); \
-    mush_free(swtch, "string"); \
-    mush_free(ls, "string"); \
-    mush_free(rs, "string"); \
-    mush_free(switches, "string")
+    mush_free(command, "string_command"); \
+    mush_free(swtch, "string_swtch"); \
+    mush_free(ls, "string_ls"); \
+    mush_free(rs, "string_rs"); \
+    mush_free(switches, "string_switches")
 
 /** Parse commands.
  * Parse the commands. This is the big one!
@@ -1022,11 +1027,11 @@ command_parse(dbref player, dbref cause, char *string, int fromport)
 
   rhs_present = 0;
 
-  command = mush_malloc(BUFFER_LEN, "string");
-  swtch = mush_malloc(BUFFER_LEN, "string");
-  ls = mush_malloc(BUFFER_LEN, "string");
-  rs = mush_malloc(BUFFER_LEN, "string");
-  switches = mush_malloc(BUFFER_LEN, "string");
+  command = mush_malloc(BUFFER_LEN, "string_command");
+  swtch = mush_malloc(BUFFER_LEN, "string_swtch");
+  ls = mush_malloc(BUFFER_LEN, "string_ls");
+  rs = mush_malloc(BUFFER_LEN, "string_rs");
+  switches = mush_malloc(BUFFER_LEN, "string_switches");
   if (!command || !swtch || !ls || !rs || !switches)
     mush_panic("Couldn't allocate memory in command_parse");
   p = string;
